# learning-hub-infra

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  README.md  alembic.ini  commitlint.config.js  commitlint.config.mjs  conftest.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  dependabot-auto-merge.yml  pr-checks.yml  release.yml  security.yml
.out-of-scope/: custom-deepeval-metric-async.md  docker-compose.md  pytest-module-level-test-data.md
api/: pyproject.toml
api/src/api/: __init__.py  dependencies.py  main.py  prompt.py  server.py
api/src/api/controllers/: __init__.py  qa_controller.py
api/src/api/routes/: documents.py  ingest.py  retrieval_qa.py
api/tests/: conftest.py
api/tests/api/: test_documents.py  test_ingest.py  test_prompt.py  test_query.py  test_smoke.py
api/tests/api/controllers/: test_qa_controller.py
core/: pyproject.toml
core/src/core/: __init__.py  exceptions.py
core/src/core/clients/: __init__.py  embeddings_client.py  llm_client.py  reranker_client.py
core/src/core/config/: settings.py
core/src/core/database/: __init__.py  connection.py  schema.py
core/src/core/database/migrations/: env.py  script.py.mako
core/src/core/database/migrations/versions/: 2fff441e94ab_initial_schema_with_documents_chunks_.py  edda412e1f07_add_parent_chunk_id_and_content_search.py
core/src/core/types/: __init__.py  chat.py  chunk.py  document.py  responses.py  retrieval_config.py
core/tests/core/: test_connection.py  test_embeddings_client.py  test_exceptions.py  test_llm_client.py  test_migration.py  test_smoke.py
core/tests/core/types/: test_chunk.py  test_document.py  test_responses.py
depth_dive/: pyproject.toml
depth_dive/src/depth_dive/: __init__.py
depth_dive/tests/depth_dive/: test_smoke.py
docs/: ai-system-tree.md  coding-standards.md  commit-instructions.md  tech-stack.md
docs/adr/: 0001-hosted-inference-api-for-mvp.md  0002-pgvector-for-mvp.md  0003-handroll-rag-pipeline.md  0004-hosted-embedding-api.md  0005-structured-monorepo.md  0006-backgroundtask-for-mvp-ingestion.md  0007-retrieval-eval-recall-at-k-path-gated-ci.md  0007-retrieval-evaluation-recall-at-k.md  0009-structured-harness-a-response.md  0010-conventional-commits.md  0011-import-linter-module-boundaries.md  0012-depth-dive-web-search-agentic.md  0013-depth-dive-search-failure-retry-fallback.md  0014-data-schema-and-api-contracts-for-harness-a.md  0015-deepeval-for-retrieval-evaluation.md  0016-retrieval-qa-critical-gaps-parent-child-hybrid-rerank.md  0017-important-but-gatable-retrieval-phase.md
ingestion/: pyproject.toml
ingestion/src/ingestion/: __init__.py  models.py  pipeline.py  splitting.py  tasks.py
ingestion/tests/ingestion/: test_pipeline.py  test_smoke.py  test_splitting.py  test_tasks.py
retrieval_qa/: pyproject.toml
retrieval_qa/src/retrieval_qa/: __init__.py  _utils.py
retrieval_qa/src/retrieval_qa/chunking/: __init__.py  _html_utils.py  base.py  book_chunker.py  documentation_chunker.py  paper_chunker.py
retrieval_qa/src/retrieval_qa/retrieval/: query.py
retrieval_qa/tests/eval/: conftest.py  eval_vectors.json
retrieval_qa/tests/retrieval_qa/: test_book_chunker.py  test_chunker_registry.py  test_documentation_chunker.py  test_html_utils.py  test_paper_chunker.py  test_smoke.py
retrieval_qa/tests/retrieval_qa/retrieval/: conftest.py  eval_set.yaml  eval_vectors.json  test_eval.py  test_query.py
scripts/: generate_eval_vectors.py
