[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ingestion"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["core", "retrieval-qa"]

[tool.uv.sources]
core = { workspace = true }
retrieval-qa = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/ingestion"]
