[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ingestion"
version = "0.1.0"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "core",
    "retrieval-qa",
    "fastapi>=0.139.2",
]

[tool.uv.sources]
core = { workspace = true }
retrieval-qa = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/ingestion"]
